# recommender

./: .gitignore  README.md  pyproject.toml
data/: rec_sys_fml.ipynb
recommender/: __init__.py  client_app.py  client_app1.py  client_app2.py  server_app.py  task.py
