[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recommender"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.9.0,<2.0",
    "flwr-datasets[vision]>=0.0.2,<1.0.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
    "scikit-learn==1.5.1",
    "torch-geometric==2.5.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Yang Li"

[tool.flwr.app.components]
serverapp = "recommender.server_app:app"
clientapp = "recommender.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
